// file: pkg/db/proto/messages/database_info.proto
edition = "2023";

package gcommon.v1.database;


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

/**
 * DatabaseInfo provides metadata about a database instance.
 * Used for identifying database capabilities and connection details.
 */
message DatabaseInfo {
  // Database name
  string name = 1;

  // Database version information
  string version = 2;

  // Database type/vendor (e.g., PostgreSQL, MySQL, CockroachDB)
  string type = 3;

  // Sanitized connection string (credentials removed)
  string connection_string = 4;

  // List of supported database features
  repeated string features = 5;
}
