// file: proto/gcommon/v1/database/config/pebble_config.proto
// version: 1.0.0
// guid: 3d548f91-9c4d-4fe7-b610-fd2cafd073ef

edition = "2023";

package gcommon.v1.database.config;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.database.config";

/**
 * PebbleConfig represents Pebble-specific configuration options
 * for the embedded key-value store driver.
 */
message PebbleConfig {
  // Path is the directory where the database files are stored
  string path = 1;

  // CacheSize is the size of the block cache in bytes
  int64 cache_size = 2;

  // MemtableSize is the memtable size in bytes
  int64 memtable_size = 3;

  // MaxOpenFiles is the maximum number of open files
  int32 max_open_files = 4;

  // Compression enables on-disk compression when true
  bool compression = 5;
}
